# project_data_football

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
01.bronze/: 01_bronze_ingestao_rodadas.ipynb  01_ingestao_partidas_rodada.ipynb  02_ingestao_pontuacao_rodada.ipynb  03_ingestao_mercado_base.ipynb  bronze_validate.ipynb
02.silver/: 01_silver_pontuacao.ipynb  01_silver_pontuacao_atleta.ipynb  02_silver_partidas.ipynb  03_silver_clubes.ipynb  04_silver_atletas.ipynb  05_silver_posicao.ipynb  06_silver_rodada.ipynb  07_silver_campeonato.ipynb  08_silver_estadio.ipynb  silver_validate.ipynb
02.silver/00.silver_prod/: 01_silver_pontuacao.prod.ipynb  01_silver_pontuacao_atleta.prod.ipynb  02_silver_partidas.prod.ipynb  03_silver_clubes.prod.ipynb  04_silver_atletas.prod.ipynb  05_silver_posicao.prod.ipynb  06_silver_rodada.prod.ipynb  07_silver_campeonato.prod.ipynb  08_silver_estadio.prod.ipynb
03.gold/: 01_gold_kpi_partidas.ipynb  02_gold_kpi_estadios.ipynb  03_gold_classificacao_clubes.ipynb  04_gold_stats_clubes.ipynb  05_gold_kpi_pontuacoes_cartola.ipynb  gold_validate.ipynb
03.gold/00.gold_prod/: 01_gold_kpi_partidas.prod.ipynb  02_gold_kpi_estadios.prod.ipynb  03_gold_classificacao_clubes.prod.ipynb  03_gold_classificacao_clubes_brasileirao.prod.ipynb  04_gold_stats_clubes.prod.ipynb  05_gold_kpi_pontuacoes_cartola.prod.ipynb
app/: database.py  main.py
